# RockPaperScissors

./: CMakeLists.txt  README.md
src/: Arena.cpp  Arena.h  Referee.cpp  Referee.h  Woolie.cpp  Woolie.h  WoolieRPS.cpp  WoolieRPS.h  rng.cpp  rng.h  woolie_exception.h  woolie_main.cpp
